# voice-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
scripts/: healthcheck.sh  run_clone_test.py  test_parse.py
src/voice_engine/: __init__.py  config.py  main.py
src/voice_engine/adapters/: base.py  chatterbox.py  factory.py  resemble.py
src/voice_engine/api/: auth.py  health.py  jobs.py  parse.py  voices.py
src/voice_engine/audio/: analyzer.py  postprocess.py  splitter.py  utils.py
src/voice_engine/cloning/: __init__.py  aligner.py  clone_manager.py  dataset_builder.py  models.py  script_parser.py
src/voice_engine/db/: characters.py  jobs.py  lexicon.py  lines.py  projects.py  scripts.py  takes.py  webhook_outbox.py
src/voice_engine/dictionaries/: chabad_pronunciation.py  emotion_directions.py  hebrew_names.py  pronunciations.py  resemble_tags.py
src/voice_engine/lib/: errors.py  hebrew_utils.py  logger.py
src/voice_engine/models/: domain.py  events.py  requests.py  responses.py
src/voice_engine/parsers/: directions.py  google_docs.py  script.py
src/voice_engine/platform/: webhooks.py
src/voice_engine/preprocessor/: fidelity.py  llm_client.py  processor.py  prompts.py
tests/: conftest.py
tests/unit/: test_clone_cleanup.py  test_clone_dataset_builder.py  test_clone_script_parser.py  test_emotion_dictionary.py  test_fidelity.py  test_google_docs.py  test_hebrew_utils.py  test_postprocess.py  test_preprocessor_batch.py  test_preprocessor_prompt.py  test_pronunciations.py  test_resemble_adapter.py  test_resemble_cloning.py  test_resemble_tags.py  test_script_parser.py  test_speaker_voices.py  test_voices_api.py  test_webhooks.py
(+5 files in other folders)
