[tool.poetry]
name = "voice-engine"
version = "0.1.0"
description = "Voice generation engine for smrtVoice app"
authors = ["smrtesy <chanoch@maor.org>"]
readme = "README.md"
packages = [{include = "voice_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# HTTP client
httpx = "^0.27.0"
aiohttp = "^3.9.0"

# Job queue
huey = "^2.5.0"
redis = "^5.0.0"

# Audio processing
pydub = "^0.25.1"
soundfile = "^0.12.0"
librosa = "^0.10.0"
numpy = "^1.26.0"
audiotsm = "^0.1.2"  # WSOLA time-stretch for post-production

# Database & Storage
supabase = "^2.4.0"
postgrest = "^0.16.0"

# LLM
anthropic = "^0.20.0"

# Google APIs
google-api-python-client = "^2.120.0"
google-auth = "^2.28.0"
google-auth-oauthlib = "^1.2.0"

# Document parsing
python-docx = "^1.1.0"

# Utilities
structlog = "^24.1.0"
tenacity = "^8.2.0"
python-multipart = "^0.0.9"
cryptography = "^42.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
